# Clockwork

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: clockwork.yml  prerelease.yml
scripts/: spsa_out_replace.py
src/: bitboard.hpp  board.hpp  common.hpp  eval_constants.hpp  evaltune_main.cpp  evaluation.cpp  evaluation.hpp  geometry.hpp  history.cpp  history.hpp  move.cpp  move.hpp  movegen.cpp  movegen.hpp  movepick.cpp  movepick.hpp  perft.cpp  position.cpp  position.hpp  search.cpp  search.hpp  see.hpp  square.hpp  tt.cpp  tt.hpp  tuned.hpp  uci.cpp
src/tuning/: globals.hpp  graph.cpp  graph.hpp  optim.hpp  value.cpp  value.hpp
src/util/: pretty.hpp  static_vector.hpp
src/util/vec/: avx2.hpp  avx512.hpp
tests/: test_geometry.cpp  test_is_legal.cpp  test_see.cpp
